<resources>
    <string name="app_name">DP Application</string>
    <string name="build_date">29.04.2016</string>
    <string name="rand_string">asdfghjklqwertyuiopzxcvbnm</string>
    <string name="Rand_string">ASDFGHJKLQWERTYUIOPZXCVBNM</string>
    <string name="Rand_str">A-Z</string>
    <string name="rand_str">a-z</string>
    <string name="rand_spec">!@#$%^*()-=+_:;"/?.,\|</string>
    <string name="rand_num">1234567890</string>
    <string name="rand_num_str">0-9</string>
    <string name="rand_spec_str">!@;...</string>
    <string name="k1">1</string>
    <string name="k2">2</string>
    <string name="k3">3</string>
    <string name="k4">4</string>
    <string name="k5">5</string>
    <string name="k6">6</string>
    <string name="k7">7</string>
    <string name="k8">8</string>
    <string name="k9">9</string>
    <string name="k0">0</string>
    <string name="k10">A</string>
    <string name="k11">B</string>
    <string name="k12">C</string>
    <string name="k13">D</string>
    <string name="k14">E</string>
    <string name="k15">F</string>
    <string name="kr">=</string>
    <string name="kp">+</string>
    <string name="km">-</string>
    <string name="ku">*</string>
    <string name="kd">/</string>
    <string name="kso">(</string>
    <string name="ksc">)</string>

    <!--Yandex Translate-->
    <!--Menu-->
    <string name="mautor">About the Author</string>
    <string name="mcalc">Calculator</string>
    <string name="mwork">For developers</string>
    <string name="mrand">random values</string>
    <string name="mkmb">Rock paper scissors</string>
    <string name="mHard">Hard Mode</string>

    <!--Random-->
    <string name="rrezchim">Select mode</string>
    <string name="rinteger">Integer</string>
    <string name="rreal">Real number</string>
    <string name="rboolean">Boolean value</string>
    <string name="rsting">String</string>
    <string name="rvopr">Difficult question</string>
    <string name="rgran">to Specify the boundaries</string>
    <string name="rgen">Generate</string>
    <string name="rmin">Minimum</string>
    <string name="rmax">High</string>
    <string name="rinput_vopr">Enter your question that can be answered Yes/no</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rsendInt">This number threw my phone:</string>
    <string name="rsendBool">This is a Boolean value threw my phone:</string>
    <string name="rsendString">This line threw my phone:</string>
    <string name="rsendVopr">So answered my phone question:</string>
    <string name="rand_language">qwertyuiopasdfghjklzxcvbnm</string>
    <string name="Rand_language">QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="Rand_str_language">A-Z</string>
    <string name="rand_str_language">a-z</string>
    <string name="rminlength">Minimum length of string:</string>
    <string name="rmaxlength">Maximum string length:</string>
    <string name="rsymbol">string</string>

    <!--Autor-->
    <string name="aautor">Author:</string>
    <string name="adp">Dmitry Proskurin</string>
    <string name="aback">Back to menu</string>
    <string name="asend">Share</string>
    <string name="aversion">Version:</string>
    <string name="adata">date of build:</string>
    <string name="alibe">I like the Calculator from Dmitry PRO version</string>
    <string name="adatas">Build</string>
    <string name="alocal">Fresia localization:</string>
    <string name="version"> 1.1.1.2</string>
    <string name="ot">from</string>
    <string name="date"> 22.04.2016</string>
    <string name="adeveloper">Now.</string>

    <string name="csend">This was considered in the calculator ABOUT Dmitry:</string>
    <string name="csch">system base</string>
    <string name="kclear">clear</string>
    <string name="kl">L</string>
    <string name="kri">R</string>
    <string name="kdel">Удалить</string>

    <!--kamen-noschnizi-bumaga-->
    <string name="kpad">Device:</string>
    <string name="kuser">User:</string>
    <string name="kn">Draw</string>
    <string name="kall">Total</string>
    <string name="kmi">telephone We played Rock-Scissors-Paper</string>
    <string name="kmi2">parties. And I won</string>
    <string name="kmi3">. And the phone - </string>

    <!--Send-->
    <string name="sfrom">person you want to send:</string>
    <string name="ssend">Send</string>
    <string name="scalc">This message was sent from Dmitry Calculator PRO version </string>
    <string name="sthema">I have calculated in the calculator by Dmitry ABOUT</string>

</resources>
