<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="us.myprogram.app.dpapplication.Calc">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/edit"
        />
    <TextView
        android:id="@+id/sedit"
        android:layout_alignBaseline="@id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_below="@id/edit"
        android:id="@+id/liner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k1"
            android:id="@+id/k1"
            android:layout_weight="2"
            android:onClick="key_1"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k2"
            android:layout_weight="2"
            android:id="@+id/k2"
            android:onClick="key_2"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k3"
            android:id="@+id/k3"
            android:layout_weight="2"
            android:onClick="key_3"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kr"
            android:layout_weight="2.1"
            android:id="@+id/kr"
            android:onClick="key_r"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/liner1"
        android:id="@+id/liner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k4"
            android:layout_weight="2"
            android:id="@+id/k4"
            android:onClick="key_4"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k5"
            android:layout_weight="2"
            android:id="@+id/k5"
            android:onClick="key_5"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k6"
            android:id="@+id/k6"
            android:layout_weight="2"
            android:onClick="key_6"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kp"
            android:id="@+id/kp"
            android:layout_weight="2.1"
            android:onClick="key_p"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/liner2"
        android:id="@+id/liner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k7"
            android:id="@+id/k7"
            android:onClick="key_7"
            android:layout_weight="2" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k8"
            android:id="@+id/k8"
            android:onClick="key_8"
            android:layout_weight="2" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k9"
            android:id="@+id/k9"
            android:onClick="key_9"
            android:layout_weight="2" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/km"
            android:id="@+id/km"
            android:onClick="key_m"
            android:layout_weight="2.1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/liner4"
        android:layout_below="@id/liner3">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k0"
            android:layout_weight="2"
            android:id="@+id/k0"
            android:onClick="key_0"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k10"
            android:layout_weight="2"
            android:id="@+id/kA"
            android:onClick="key_A"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k11"
            android:layout_weight="2"
            android:id="@+id/kB"
            android:onClick="key_B"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ku"
            android:id="@+id/ku"
            android:onClick="key_u"
            android:layout_weight="2.1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/liner5"
        android:layout_below="@id/liner4">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k12"
            android:layout_weight="2"
            android:id="@+id/kc"
            android:onClick="key_C"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k13"
            android:layout_weight="2"
            android:id="@+id/kD"
            android:onClick="key_D"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k14"
            android:layout_weight="2"
            android:id="@+id/kE"
            android:onClick="key_E"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kd"
            android:id="@+id/kd"
            android:onClick="key_d"
            android:layout_weight="2.1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/liner6"
        android:layout_below="@id/liner5">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/k15"
            android:layout_weight="2"
            android:id="@+id/kF"
            android:onClick="key_F"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kclear"
            android:layout_weight="2.1"
            android:onClick="key_Clear"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kl"
            android:layout_weight="2.1"
            android:onClick="key_shl"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kri"
            android:onClick="key_shr"
            android:layout_weight="2.1" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kdel"
            android:onClick="key_del"
            android:layout_weight="2.1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/liner7"
        android:layout_below="@id/liner6">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/kso"
            android:layout_weight="1"
            android:onClick="key_so"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ksc"
            android:layout_weight="1"
            android:onClick="key_sc"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/km"
            android:onClick="sm" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:id="@+id/ssch"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="fill_parent"
            android:text="@string/kp"
            android:onClick="sp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner7"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/aback"
            android:onClick="back"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/asend"
            android:onClick="send"
            />
    </LinearLayout>

</RelativeLayout>
</ScrollView>