<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    tools:context="us.myprogram.app.dpapplication.Menu">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mcalc"
        android:onClick="calc"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mrand"
        android:onClick="rand"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mkmb"
        android:onClick="kmb"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mautor"
        android:onClick="autor"/>

    <CheckBox
        android:id="@+id/isw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mwork"
        android:onClick="work"/>
    <CheckBox
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mHard"
        android:onClick="Hard"
        android:visibility="invisible"/>
</LinearLayout>
