<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/formRandom"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="us.myprogram.app.dpapplication.Random">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rrezchim"
        android:textColor="#000000"
        android:textSize="14dp"
        android:id="@+id/rezchim"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rinteger"
        android:onClick="integer"
        android:id="@+id/integer"
        android:layout_below="@id/rezchim"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rreal"
        android:id="@+id/real"
        android:onClick="real"
        android:layout_below="@id/integer"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rboolean"
        android:id="@+id/bool"
        android:onClick="bool"
        android:layout_below="@id/real"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsting"
        android:id="@+id/str"
        android:onClick="string"
        android:layout_below="@id/bool"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rvopr"
        android:id="@+id/vopr"
        android:onClick="vopr"
        android:layout_below="@id/str"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gran"
        android:layout_below="@id/vopr"
        android:onClick="gran"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generator"
        android:layout_below="@id/gran"
        android:visibility="invisible"
        android:textSize="18dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rgen"
        android:onClick="gen"
        android:id="@+id/bgen"
        android:layout_below="@id/generator"
        android:visibility="invisible"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bgen"
        android:onClick="send"
        android:id="@+id/sending"
        android:text="@string/asend"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tmin"
        android:textSize="14dp"
        android:visibility="invisible"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/min"
        android:visibility="invisible"/>
    <TextView
        android:textSize="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tmax"
        android:visibility="invisible"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/max"
        android:visibility="invisible"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tmp2"
        android:visibility="invisible"
        android:onClick="ctmp2"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tmp3"
        android:visibility="invisible"
        android:onClick="ctmp3"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tmp4"
        android:visibility="invisible"
        android:onClick="ctmp4"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tmp5"
        android:visibility="invisible"
        android:onClick="ctmp5"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tmp6"
        android:visibility="invisible"
        android:onClick="ctmp6"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/leng"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/length"/>

</RelativeLayout>
</ScrollView>