<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="us.myprogram.app.dpapplication.kmb">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageView"
        android:src="@drawable/vop"
        android:onClick="cheats"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kpad"
        android:id="@+id/pad"
        android:textSize="16dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kolpad"
        android:text=" 0"
        android:textColor="#000000"
        android:layout_alignTop="@+id/imageView"
        android:layout_toLeftOf="@+id/kolall"
        android:layout_toStartOf="@+id/kolall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kall"
        android:id="@+id/all"
        android:textSize="16dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kolall"
        android:text=" 0"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/all"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kuser"
        android:id="@+id/user"
        android:textSize="16dp"
        android:layout_below="@+id/all"
 />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/koluser"
        android:text=" 0"
        android:textColor="#000000"
        android:layout_alignTop="@+id/user"
        android:layout_toRightOf="@+id/kolpad"
        android:layout_toEndOf="@+id/kolpad" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asend"
        android:onClick="send"
        android:id="@+id/button"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />
    <LinearLayout
        android:id="@+id/kmblinear"
        android:layout_below="@id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:id="@+id/imageView3"
            android:src="@drawable/noschnizi"
            android:onClick="nosch" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:id="@+id/imageView4"
            android:src="@drawable/bumaga"
            android:onClick="bumaga" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:id="@+id/imageView2"
            android:src="@drawable/kamen"
            android:onClick="kamen"
            />
    </LinearLayout>



</RelativeLayout>
